--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,44 +1,40 @@
-name: Build C Program for Windows with MSYS2
+name: Build C Program for Windows
 
 on:
   push:
     branches:
-      - main
+      - main  # Trigger the workflow on 'main' branch
   pull_request:
     branches:
-      - main
+      - main  # Trigger workflow on PRs to 'main'
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-latest  # Use the Windows runner to compile for Windows
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v4  # Updated to latest version
 
-    - name: Install MSYS2
-      run: |
-        choco install msys2
-        refreshenv
-
-    - name: Set MSYS2 environment
-      run: |
-        echo "C:\\tools\\msys64\\usr\\bin" >> $GITHUB_ENV  # Add MSYS2 bin directory to PATH
-
-    - name: Update MSYS2
-      run: |
-        C:\\tools\\msys64\\usr\\bin\\bash.exe -c "pacman -Syu --noconfirm"
-
-    - name: Install dependencies
-      run: |
-        C:\\tools\\msys64\\usr\\bin\\bash.exe -c "pacman -S --noconfirm mingw-w64-x86_64-gcc make"
-
-    - name: Build the C program
-      run: |
-        C:\\tools\\msys64\\usr\\bin\\bash.exe -c "make Bit.exe"
-
-    - name: Upload Windows executable
-      uses: actions/upload-artifact@v2
+    - name: Setup MSYS2
+      uses: msys2/setup-msys2@v2
       with:
-        name: bit-executable
-        path: Bit.exe
+        update: true
+        install: >-
+          mingw-w64-x86_64-gcc
+          mingw-w64-x86_64-make
+          mingw-w64-x86_64-curl
+          mingw-w64-x86_64-zlib
+          mingw-w64-x86_64-json-c
+
+    - name: Build the program
+      shell: msys2 {0}
+      run: |
+        make  # Use make in MSYS2 environment
+        # If your Makefile requires a specific name: make -f Makefile
+
+    - name: Upload .exe artifact
+      uses: actions/upload-artifact@v4  # Upload the artifact
+      with:
+        name: bit.exe
+        path: bit.exe  # Path to the built executable
