--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Build the program
       shell: msys2 {0}
       run: |
-        mingw32-make  # Use mingw32-make in MSYS2 MINGW64 environment
-        # If your Makefile requires a specific name: mingw32-make -f Makefile
+        mingw32-make -f Makefile  # Specify the Makefile explicitly
+        # Adjust the target if needed, e.g., mingw32-make -f Makefile all
 
     - name: Upload .exe artifact
       uses: actions/upload-artifact@v4  # Upload the artifact
