--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -26,6 +26,7 @@ jobs:
           mingw-w64-x86_64-curl
           mingw-w64-x86_64-zlib
           mingw-w64-x86_64-json-c
+          mingw-w64-x86_64-openssl
 
     - name: Build the program
       shell: msys2 {0}
